project- description & bar

--- a/web/src/app/pages/myprojects/myprojects.page.html
+++ b/web/src/app/pages/myprojects/myprojects.page.html
@@ -1,3 +1,7 @@
 <div class="container">
-  <p>myprojects works!</p>
+  <app-project
+    class="item"
+    *ngFor="let project of projects"
+    [properties]="project"
+  ></app-project>
 </div>
