input && projects-service

--- a/web/src/app/pages/projects/projects.page.html
+++ b/web/src/app/pages/projects/projects.page.html
@@ -1,6 +1,8 @@
 <div class="container">
-  <h1>projects works!</h1>
+  <h1>Projects</h1>
+  <app-input (searchEvent)="searchChanged($event)"></app-input>
   <app-table
+    *ngIf="projResponse"
     [collection]="projResponse.data"
     [pageInfo]="projResponse.pageInfo"
     (pageChange)="pageChanged($event)"
