--- a/web/src/app/shared/components/common/table/table.component.html
+++ b/web/src/app/shared/components/common/table/table.component.html
@@ -22,10 +22,10 @@
       "
     >
       <th>
-        <p>{{ item.Name }}</p>
+        <p>{{ item.name }}</p>
       </th>
       <th>
-        <p>{{ item.Url }}</p>
+        <p>{{ item.self }}</p>
       </th>
       <th>
         <button
