--- a/web/src/app/shared/components/common/input/input.component.scss
+++ b/web/src/app/shared/components/common/input/input.component.scss
@@ -1,16 +1,18 @@
 .group {
-  width: 30%;
+  width: 100%;
   align-self: flex-end;
   display: flex;
   border: 1px solid #fff;
   padding: 10px;
-  margin-bottom: 10px;
 }
 input {
   width: 80%;
   background: transparent;
   border: none;
   outline: none;
+  color: #fff;
+}
+input[placeholder] {
   color: #fff;
 }
 .button {
