--- a/web/src/app/shared/components/table/table.component.html
+++ b/web/src/app/shared/components/table/table.component.html
@@ -2,6 +2,7 @@
   <thead>
     <tr class="table_header">
       <th>Name</th>
+      <th>Key</th>
       <th>Url</th>
       <th>Действие</th>
     </tr>
@@ -23,6 +24,9 @@
     >
       <th>
         <p>{{ item.name }}</p>
+      </th>
+      <th>
+        <p>{{ item.key }}</p>
       </th>
       <th>
         <p>{{ item.self }}</p>
